# gtkmm-glade

./: CMakeLists.txt  README.md  makefile
gui/: demo.glade  example.glade  test.glade
src/: main.cpp
